@@ -1,14 +1,19 @@
 package com.morpheusdata.core;
 
+import com.morpheusdata.views.HandlebarsPluginTemplateLoader;
+import com.morpheusdata.views.HandlebarsRenderer;
+import com.morpheusdata.views.Renderer;
+import com.morpheusdata.views.ViewModel;
+import com.morpheusdata.web.Dispatcher;
+import com.morpheusdata.web.PluginController;
+import com.morpheusdata.web.Route;
+
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.ArrayList;
-import java.util.Collection;
+import java.util.*;
 import java.util.jar.Attributes;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
@@ -23,12 +28,15 @@ public class PluginManager {
 
 	private ArrayList<Plugin> plugins = new ArrayList<>();
 	private MorpheusContext morpheusContext;
+	private Dispatcher dispatcher;
+	private Renderer<?> renderer = new HandlebarsRenderer();
 	private final ClassLoader mainLoader = PluginManager.class.getClassLoader();
 	// Isolated classloader all plugins will use as a parent.
 	private final ClassLoader pluginManagerClassLoader = new ClassLoader(mainLoader){};
 
 	PluginManager(MorpheusContext context, Collection<Class<Plugin>> plugins) throws InstantiationException, IllegalAccessException {
 		this.morpheusContext = context;
+		this.dispatcher = new Dispatcher(this);
 
 		if(this.morpheusContext == null) {
 			throw new IllegalArgumentException("Context must not be null when passed to the constructor of the Morpheus Plugin Manager");
@@ -40,10 +48,15 @@ public class PluginManager {
 
 	public PluginManager(MorpheusContext context) {
 		this.morpheusContext = context;
+		this.dispatcher = new Dispatcher(this);
 
 		if(this.morpheusContext == null) {
 			throw new IllegalArgumentException("Context must not be null when passed to the constructor of the Morpheus Plugin Manager");
 		}
+	}
+
+	public Object handleRoute(String route, ViewModel<?> model, List<Map<String, String>> permissions) {
+		return dispatcher.handleRoute(route, model, permissions);
 	}
 
 	/**
@@ -64,14 +77,21 @@ public class PluginManager {
 	 * @throws IllegalAccessException
 	 * @throws InstantiationException
 	 */
-	void registerPlugin(Class<Plugin> pluginClass, File jarFile, String version) throws IllegalAccessException, InstantiationException {
+	void registerPlugin(Class<Plugin> pluginClass, File jarFile, String version) throws IllegalAccessException, InstantiationException, MalformedURLException {
+		URL jarUrl = new URL("file", null, jarFile.getAbsolutePath());
+		ClassLoader pluginClassLoader =  new ChildFirstClassLoader(new URL[]{jarUrl}, pluginManagerClassLoader);
+
 		Plugin plugin = pluginClass.newInstance();
 		plugin.setPluginManager(this);
 		plugin.setMorpheusContext(this.morpheusContext);
 		plugin.setName(pluginClass.toString());
 		plugin.setFileName(jarFile.getAbsolutePath());
 		plugin.setVersion(version);
+		plugin.setClassLoader(pluginClassLoader);
 		plugin.initialize();
+		if(plugin.getControllers().size() > 0 && !plugin.hasCustomRender()) {
+			this.renderer.addTemplateLoader(pluginClassLoader);
+		}
 		plugins.add(plugin);
 	}
 
@@ -82,7 +102,9 @@ public class PluginManager {
 	 */
 	public void registerPlugin(String pathToJar) throws Exception {
 		File jarFile = new File(pathToJar);
-		URLClassLoader pluginLoader = URLClassLoader.newInstance(new URL[]{jarFile.toURL()}, pluginManagerClassLoader);
+		URL jarUrl = new URL("file", null, jarFile.getAbsolutePath());
+
+		URLClassLoader pluginLoader = URLClassLoader.newInstance(new URL[]{jarUrl}, pluginManagerClassLoader);
 
 		JarInputStream jarStream = new JarInputStream(new FileInputStream(jarFile));
 		Manifest mf = jarStream.getManifest();
@@ -90,14 +112,20 @@ public class PluginManager {
 		String pluginClassName = attributes.getValue("Plugin-Class");
 		String pluginVersion = attributes.getValue("Plugin-Version");
 
-		Class<Plugin> pluginClass = (Class<Plugin>) pluginLoader.loadClass(pluginClassName);
+		try {
+			Class<Plugin> pluginClass = (Class<Plugin>) pluginLoader.loadClass(pluginClassName);
 
-		System.out.println("Loading Plugin " + pluginClassName + ":" + pluginVersion + " from " +  pathToJar);
-		registerPlugin(pluginClass, jarFile, pluginVersion);
+			System.out.println("Loading Plugin " + pluginClassName + ":" + pluginVersion + " from " +  pathToJar);
+			registerPlugin(pluginClass, jarFile, pluginVersion);
+		} catch (Exception e) {
+			System.out.println("Unable to load plugin class from " + pathToJar);
+			e.printStackTrace();
+		}
 	}
 
 	void deregisterPlugin(Plugin plugin) {
 		plugin.onDestroy();
+		this.renderer.removeTemplateLoader(plugin.getClassLoader());
 		plugins.remove(plugin);
 	}
 
@@ -109,6 +137,18 @@ public class PluginManager {
 		return this.plugins;
 	}
 
+	public Map<Class, List<Route>> getRoutes() {
+		Map<Class, List<Route>> routes = new HashMap<>();
+		for (Plugin p : this.getPlugins()) {
+			for (PluginController c : p.getControllers()) {
+				if (c.getRoutes().size() > 0) {
+					routes.put(c.getClass(), c.getRoutes());
+				}
+			}
+		}
+		return routes;
+	}
+
 	public PluginProvider findByCode(String code) {
 		for(Plugin plugin: this.plugins) {
 			PluginProvider pp = plugin.getProviderByCode(code);
@@ -117,5 +157,9 @@ public class PluginManager {
 			}
 		}
 		return null;
+	}
+
+	public Renderer<?> getRenderer() {
+		return this.renderer;
 	}
 }
